--- a/package.json
+++ b/package.json
@@ -6,22 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prebuild": "npm run copyimages",
+    "copyimages": "node ./bin/copy-images.mjs"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "chart.js": "^4.4.1",
+    "fs-extra": "^11.2.0",
+    "gray-matter": "^4.0.3",
+    "hover-effect": "^1.2.1",
+    "next": "14.0.4",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.7",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-spotify-player": "^1.0.4",
+    "react-string-replace": "^1.1.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
+    "prettier-plugin-tailwindcss": "^0.5.9"
   }
 }
